@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1928 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem with not-specified binding file during automatic naming collision resolution.
+       Details: http://jira.codehaus.org/browse/CASTOR-1928
+       (Werner - 20070401)
+
 XML:   Resolved issue CASTOR-238 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Added support for 'overriding' the name of the Java 'content' member.
        Details: http://jira.codehaus.org/browse/CASTOR-238
